--- a/evaluator/src/app/components/evaluators/evaluators.component.scss
+++ b/evaluator/src/app/components/evaluators/evaluators.component.scss
@@ -8,8 +8,11 @@
   flex: 1;
 }
 // -------- HEADER
-.fa-lg{
+.fa-pen-to-square{
   color: var(--light-blue);
+}
+.fa-lg{
+  color: var(--dark-blue);
 }
 
 .btn-exit {
