--- a/evaluator/src/app/components/group/group.component.html
+++ b/evaluator/src/app/components/group/group.component.html
@@ -16,48 +16,50 @@
           <div class="dialog-form">
             <h2> Formulário de Equipe </h2>
             <div class="line"></div>
-            <form [formGroup]="form" (ngSubmit)="onSubmit(form.value);">
-              <div class="input-container">
-                <label for="members"> MEMBROS DA EQUIPE </label>
-                <div class="input-group">
-                  <div class="icon"><i class="fa-solid fa-people-group fa-lg"></i></div>
-                  <input type="text" class="input-form" id="members" placeholder="Ex. Oscar Schmidt, Tiago Splitter, ..." formControlName="team">
+            <form [formGroup]="form">
+              <div formGroupName="fields">
+                <div class="input-container">
+                  <label for="members"> MEMBROS DA EQUIPE </label>
+                  <div class="input-group">
+                    <div class="icon"><i class="fa-solid fa-people-group fa-lg"></i></div>
+                    <input type="text" class="input-form" id="members" placeholder="Ex. Oscar Schmidt, Tiago Splitter, ..." formControlName="team">
+                  </div>
+                </div>
+                <div class="input-container">
+                  <label for="challenge"> DESAFIO </label>
+                  <div class="input-group">
+                    <div class="icon"><i class="fa-regular fa-file-code fa-lg"></i></div>
+                    <select name="desafio" formControlName="proposition">
+                      <option *ngFor="let item of challenges" [value]="item.name"> {{ item.name }} </option>
+                    </select>
+                  </div>
+                </div>
+                <div class="input-container">
+                  <label for="challenge"> STACK </label>
+                  <div class="input-group">
+                    <div class="icon"><i class="fa-solid fa-code fa-lg"></i></div>
+                    <select name="language" formControlName="language">
+                      <option value="c#"> C# </option>
+                      <option value="java"> Java </option>
+                    </select>
+                  </div>
+                </div>
+                <div class="input-container">
+                  <label for="name-project"> NOME DO PROJETO </label>
+                  <div class="input-group">
+                    <div class="icon"><i class="fa-regular fa-pen-to-square fa-lg"></i></div>
+                    <input type="text" class="input-form" id="name-project" placeholder="Ex. Evaluation System" formControlName="projectName">
+                  </div>
+                </div>
+                <div class="input-container ">
+                  <label for="description"> DESCRIÇÃO </label>
+                  <div class="input-group">
+                    <div class="icon icon-textarea"><i class="fa-regular fa-pen-to-square fa-lg"></i></div>
+                    <textarea class="input-form" placeholder="Ex. Lorem ipsum dolor sit amet consectetur adipisicing elit. Est quas explicabo corporis soluta harum dolor minima beatae unde accusantium natus!&#10;&#10;Repositório: https://github.com/" name="description" id="description" cols="30" rows="5" formControlName="projectDescription"></textarea>
+                  </div>
                 </div>
               </div>
-              <div class="input-container">
-                <label for="challenge"> DESAFIO </label>
-                <div class="input-group">
-                  <div class="icon"><i class="fa-regular fa-file-code fa-lg"></i></div>
-                  <select name="desafio" formControlName="proposition">
-                    <option *ngFor="let challenge of challengeList" [value]="challenge">{{ challenge.toUpperCase() }}</option>
-                  </select>
-                </div>
-              </div>
-              <div class="input-container">
-                <label for="challenge"> STACK </label>
-                <div class="input-group">
-                  <div class="icon"><i class="fa-solid fa-code fa-lg"></i></div>
-                  <select name="language" formControlName="language">
-                    <option value="c#"> C# </option>
-                    <option value="java"> Java </option>
-                  </select>
-                </div>
-              </div>
-              <div class="input-container">
-                <label for="name-project"> NOME DO PROJETO </label>
-                <div class="input-group">
-                  <div class="icon"><i class="fa-regular fa-pen-to-square fa-lg"></i></div>
-                  <input type="text" class="input-form" id="name-project" placeholder="Ex. Evaluation System" formControlName="projectName">
-                </div>
-              </div>
-              <div class="input-container ">
-                <label for="description"> DESCRIÇÃO </label>
-                <div class="input-group">
-                  <div class="icon icon-textarea"><i class="fa-regular fa-pen-to-square fa-lg"></i></div>
-                  <textarea class="input-form" placeholder="Ex. Lorem ipsum dolor sit amet consectetur adipisicing elit. Est quas explicabo corporis soluta harum dolor minima beatae unde accusantium natus!&#10;&#10;Repositório: https://github.com/" name="description" id="description" cols="30" rows="5" formControlName="projectDescription"></textarea>
-                </div>
-              </div>
-              <div class="form-actions"><button type="submit" class="submit"> {{ type }} </button></div>
+              <div class="form-actions"><button type="button" class="submit" (click)="handleButtonAction(form);"> {{ buttonText }} </button></div>
             </form>
           </div>
         </div>
@@ -65,7 +67,7 @@
           <div class="dialog-form">
             <h2> Notas </h2>
             <div class="line"></div>
-            <app-criteria-table [data]="criteria"></app-criteria-table>
+            <app-criteria-table [data]="data"></app-criteria-table>
           </div>
         </div>
       </div>
@@ -73,3 +75,4 @@
   </div>
   <div class="footer"><app-footer-credits></app-footer-credits></div>
 </div>
+<app-toast></app-toast>
