--- a/evaluator/src/app/components/group/criteria-table/criteria-table.component.html
+++ b/evaluator/src/app/components/group/criteria-table/criteria-table.component.html
@@ -6,14 +6,12 @@
       <th> NOTA </th>
     </tr>
   </thead>
-  <tbody>
-    <tr *ngFor="let criterion of data">
-      <td> {{ criterion.name }} </td>
-      <td>
-        <app-progress [percent]="(criterion.grade / 10)"></app-progress>
-      </td>
-      <td> {{ criterion.grade.toLocaleString('pt-BR', { minimumFractionDigits: 1 }) }} </td>
+  <tbody *ngIf="data">
+    <tr *ngFor="let rating of data.groupRatings">
+      <td> {{ rating.criterion.name }} </td>
+      <td><app-progress [percent]="(rating.grade / 10)"></app-progress></td>
+      <td> {{ rating.grade.toLocaleString('pt-BR', { minimumFractionDigits: 1 }) }} </td>
     </tr>
   </tbody>
 </table>
-<h1 class="final-score"> NOTA FINAL: <span class="bold"> 17,50 </span></h1>
+<h1 class="final-score" *ngIf="data"> NOTA FINAL: <span class="bold"> {{ data.finalGrade.toLocaleString('pt-BR', { minimumFractionDigits: 1}) }} </span></h1>
