--- a/evaluator/src/app/components/admin/presentation/presentation.component.scss
+++ b/evaluator/src/app/components/admin/presentation/presentation.component.scss
@@ -246,6 +246,11 @@ button {
   font-size: 1.5em;
 }
 
+.avaliators-count{
+  font-size: 1.2rem;
+  margin: 0 10px;
+}
+
 @media screen and (max-width: 768px) {
   .input-icons {
     display: flex;
