--- a/evaluator/src/app/components/admin/form-new-event/form-new-event.component.html
+++ b/evaluator/src/app/components/admin/form-new-event/form-new-event.component.html
@@ -44,7 +44,7 @@
               </div>
 
                 <div class="form-actions">
-                    <!-- <button type="button" class="cancel" (click)="clearForm()"> Cancelar </button> -->
+                    <button type="button" class="cancel" (click)="clearForm()"> Cancelar </button>
                     <button type="submit" class="submit"> {{type}} </button>
                 </div>
         </form>
