--- a/evaluator/src/app/components/admin/admin.component.html
+++ b/evaluator/src/app/components/admin/admin.component.html
@@ -5,10 +5,10 @@
     <div class="select-add">
       <select name="events" id="events">
         <option value="" disabled selected hidden>Selecione um evento</option>
-        <option class="add-event" value="add-event" [routerLink]="['/admin/adicionar_evento']"> Adicionar evento <i class="fa-solid fa-plus"></i></option>
         <option value=""> 2023.1 </option>
         <option value=""> 2022.2 </option>
       </select>
+      <button [routerLink]="['/admin/adicionar_evento']" title="Adicionar/Gerenciar evento"><i class="fa-solid fa-plus"></i></button>
     </div>
   <h1 class="cadastro"> ACESSOS </h1>
   <button class="button-menu" [routerLink]="['/admin/equipes']"> Equipes </button>
