--- a/evaluator/src/app/components/admin/admin.component.scss
+++ b/evaluator/src/app/components/admin/admin.component.scss
@@ -18,6 +18,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  gap: 7px;
   select{
     width: 100%;
     border: none;
@@ -29,10 +30,12 @@
     border: none;
     background-color: var(--white);
   }
- 
-}
-select option {
-  margin-left: 10px; /* Adicione a margem à esquerda desejada */
+  button{
+    background: none;
+    text-decoration: none;
+    border: none;
+    padding: 0;
+  }
 }
 
 .add-event{
@@ -40,7 +43,7 @@ select option {
   color: var(--golden);
 }
 .fa-plus{
-  color: var(--dark-blue);
+  color: var(--golden);
 }
 .fa-plus:hover {
 	-webkit-animation: rotate-center 0.6s ease-in-out both;
