--- a/evaluator/src/app/components/admin/home/home.component.html
+++ b/evaluator/src/app/components/admin/home/home.component.html
@@ -4,7 +4,7 @@
   <h1> BEM-VINDO! </h1>
   <div class="line"></div>
   <p class="intro"> Esta é a sua interface de cadastro e gerenciamento do <span style="font-weight: 500;"> +DEVS HACK WEEK </span> </p>
-  <p class="p"> Através do <span style="font-weight: 500;"> menu lateral </span> você pode acessar as áreas correspondentes de cadastro e gerenciamento de apresentações. </p>
+  <!-- <p class="p"> Através do <span style="font-weight: 500;"> menu lateral </span> você pode acessar as áreas correspondentes de cadastro e gerenciamento de apresentações. </p>
   <p class="p"> Para acessar os formulários de cadastro, acesse o item correspondente e clique no botão "CADASTRAR". </p>
-  <p class="p"> Uma vez que um cadastro for realizado ele poderá ser editado ou excluído, clicando no ícone correspondente. </p>
+  <p class="p"> Uma vez que um cadastro for realizado ele poderá ser editado ou excluído, clicando no ícone correspondente. </p> -->
 </div>
