fix(group): form font and colors

--- a/evaluator/src/app/app.component.html
+++ b/evaluator/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!-- <app-admin></app-admin> -->
 <!-- <app-evaluators></app-evaluators> -->
-<!-- <app-group></app-group> -->
+<app-group></app-group>
 <!-- <app-admin></app-admin> -->
 <!-- <app-ranking></app-ranking> -->
 <!-- <app-login></app-login> -->
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
