--- a/evaluator/src/app/app.component.html
+++ b/evaluator/src/app/app.component.html
@@ -1,6 +1,6 @@
-<!-- <app-admin></app-admin> -->
+<app-admin></app-admin>
 <!-- <app-evaluators></app-evaluators> -->
-<app-group></app-group>
+<!-- <app-group></app-group> -->
 <!-- <app-admin></app-admin> -->
 <!-- <app-ranking></app-ranking> -->
 <!-- <app-login></app-login> -->
