--- a/evaluator/src/app/components/admin/admin.component.html
+++ b/evaluator/src/app/components/admin/admin.component.html
@@ -9,15 +9,23 @@
       </select>
       <button [routerLink]="['/admin/adicionar_evento']" title="Adicionar/Gerenciar Evento"><i class="fa-solid fa-plus"></i></button>
     </div>
-  <h1 class="cadastro"> ACESSOS </h1>
-  <button class="button-menu" [routerLink]="['/admin/equipes']"> Equipes </button>
-  <button class="button-menu" [routerLink]="['/admin/avaliadores']"> Avaliadores </button>
-  <h1 class="cadastro"> CADASTROS </h1>
-  <button class="button-menu" [routerLink]="['/admin/criterios']"> Critérios </button>
-  <button class="button-menu" [routerLink]="['/admin/projetos']"> Desafios </button>
-  <h1 class="gerenciamento"> GERENCIAMENTO </h1>
-  <button class="button-menu" [routerLink]="['/admin/apresentacoes']"> Apresentações </button>
-  <button class="btn-exit" (click)="logout();"> SAIR </button>
+    <div class="menu">
+      <div class="menu-section">
+        <h2 class="title"> ACESSOS </h2>
+        <button class="button-menu" [routerLink]="['/admin/equipes']"> Equipes </button>
+        <button class="button-menu" [routerLink]="['/admin/avaliadores']"> Avaliadores </button>
+      </div>
+      <div class="menu-section">
+        <h2 class="title"> CADASTROS </h2>
+        <button class="button-menu" [routerLink]="['/admin/criterios']"> Critérios </button>
+        <button class="button-menu" [routerLink]="['/admin/projetos']"> Desafios </button>
+      </div>
+      <div class="menu-section">
+        <h2 class="title"> GERENCIAMENTO </h2>
+        <button class="button-menu" [routerLink]="['/admin/apresentacoes']"> Apresentações </button>
+        <button class="btn-exit" (click)="logout();"> SAIR </button>
+      </div>
+    </div>
 </div>
 <div class="rotas content">
   <router-outlet></router-outlet>
