--- a/evaluator/src/app/components/evaluators/dialog-assessment/dialog-assessment.component.html
+++ b/evaluator/src/app/components/evaluators/dialog-assessment/dialog-assessment.component.html
@@ -11,12 +11,12 @@
           <th class="bold note"> NOTA <span class="max-score"> máx. 5 </span></th>
         </tr>
       </thead>
-      <tbody>
-        <tr *ngFor="let item of listCriteria; index as i">
+      <tbody formArrayName="grades">
+        <tr *ngFor="let item of listCriteria; index as i" [formGroupName]="i">
           <td> {{item.name}} </td>
           <td class="td-weight"> {{item.weight}} </td>
           <td>
-            <input type="number" class="input-form" placeholder="Ex.: 0 - 5" min="0" max="5" [formControlName]="i" [ngClass]="{'invalid-note': checkInvalidNote(item)}">
+            <input type="number" class="input-form" placeholder="Ex.: 0 - 5" min="0" max="5" formControlName="grade" [ngClass]="{'invalid-note': checkInvalidNote(item)}">
           </td>
         </tr>
       </tbody>
