fix: Ortographic adjusts.

--- a/evaluator/src/app/components/admin/team/team.component.html
+++ b/evaluator/src/app/components/admin/team/team.component.html
@@ -20,7 +20,7 @@
         <tr>
           <th><i class="fa-solid fa-users fa-lg"></i></th>
           <th> REPRESENTANTE </th>
-          <th> USUÁRIOS </th>
+          <th> USUÁRIO </th>
           <th> SENHA </th>
           <th> AÇÕES </th>
         </tr>
