--- a/evaluator/src/app/components/admin/admin.component.html
+++ b/evaluator/src/app/components/admin/admin.component.html
@@ -3,9 +3,9 @@
     <button class="button-home" [routerLink]="['/admin']"><img src="assets/img/logo-devs2blu.png"></button>
   </div>
     <div class="select-add">
-      <select name="events" id="events">
+      <select [(ngModel)]="selectedData" (ngModelChange)="putSelectedEvent($event);" name="events" id="events">
         <option value="" disabled selected hidden> Selecione um evento </option>
-        <option *ngFor="let item of data" [value]="item.name"> {{ item.name }} </option>
+        <option *ngFor="let item of data" [value]="item.id" > {{ item.name }} </option>
       </select>
       <button [routerLink]="['/admin/adicionar_evento']" title="Adicionar/Gerenciar Evento"><i class="fa-solid fa-plus"></i></button>
     </div>
