--- a/evaluator/src/app/components/admin/criterion/criterion.component.html
+++ b/evaluator/src/app/components/admin/criterion/criterion.component.html
@@ -37,6 +37,6 @@
       </tbody>
     </table>
   </div>
-  <div *ngIf="data.length === 0"><app-fetch-empty></app-fetch-empty></div>
+  <div *ngIf="!data || data.length === 0"><app-fetch-empty></app-fetch-empty></div>
 </div>
 <app-toast></app-toast>
