--- a/evaluator/src/app/components/ranking/card/card.component.html
+++ b/evaluator/src/app/components/ranking/card/card.component.html
@@ -3,7 +3,7 @@
     <h1>{{ cardTitle }}</h1>
     <i class="fas fa-medal fa-2xl"></i>
     <h2 *ngIf="revealed"> {{ data ? data.projectName.toUpperCase() : '' }} </h2>
-    <p *ngIf="revealed"><span class="bold"> STACK: </span> {{ data ? data.stack : '' }} </p>
+    <p *ngIf="revealed"><span class="bold"> STACK: </span> {{ data ? data.language : '' }} </p>
   </div>
   <div class="blob"></div>
 </div>
