--- a/evaluator/src/app/components/admin/admin.component.scss
+++ b/evaluator/src/app/components/admin/admin.component.scss
@@ -74,6 +74,7 @@
   position: fixed;
   height: 100%;
   overflow: auto;
+  overflow-x: hidden;
   display: flex;
   align-items: center;
   flex-direction: column;
