--- a/evaluator/src/app/shared/components/footer-credits/footer-credits.component.scss
+++ b/evaluator/src/app/shared/components/footer-credits/footer-credits.component.scss
@@ -1,28 +1,74 @@
 @import url(src/styles.scss);
-.body{
-    height: auto;
-    width: 100%;
-    font-family: var(--font);
-    background-color: var(--golden);
-    color: var(--dark-blue);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 0.9rem;
-    box-shadow: 0px -5px 8px(rgba(0, 0, 0, 0.116));
+
+.body {
+  height: auto;
+  width: 100%;
+  font-family: var(--font);
+  background-color: var(--golden);
+  color: var(--dark-blue);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 0.9rem;
+  box-shadow: 0px -5px 8px(rgba(0, 0, 0, 0.1));
+  padding: 10px;
 }
-.bold{
-    font-weight: 500;
+
+.copyright {
+  font-size: 0.8rem;
 }
-p{
-    padding: 10px;
-    text-align: center;
+
+.bold {
+  font-weight: 700;
 }
-a{
-    text-decoration: none;
-    color: var(--dark-blue);
-    transition: 0.5s;
+
+p {
+  text-align: center;
 }
-a:hover{
-    color: var(--white);
+
+.link {
+  text-decoration: none;
+  color: var(--dark-blue);
+  transition: 0.3s;
+  font-weight: 500;
+}
+
+.link:hover {
+  color: var(--white);
+}
+
+.logos {
+  display: flex;
+  align-items: center;
+  gap: 50px;
+  margin-top: 25px;
+}
+
+.prefeitura {
+  width: 50px;
+}
+
+.blusoft {
+  width: 135px;
+}
+
+.proway {
+  width: 100px;
+}
+
+.furb {
+  width: 70px;
+}
+
+.senior {
+  width: 100px;
+}
+
+.tsystems {
+  width: 110px;
+}
+
+.unifique {
+  width: 90px;
 }
