--- a/evaluator/src/app/shared/components/footer-credits/footer-credits.component.scss
+++ b/evaluator/src/app/shared/components/footer-credits/footer-credits.component.scss
@@ -1,7 +1,7 @@
 @import url(src/styles.scss);
 
 .body {
-  height: auto;
+  height: 55px;
   width: 100%;
   font-family: var(--font);
   background-color: var(--golden);
@@ -9,10 +9,16 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   font-size: 0.9rem;
-  box-shadow: 0px -5px 8px(rgba(0, 0, 0, 0.1));
+  box-shadow: 0px -5px 8px rgba(0, 0, 0, 0.1);
   padding: 10px;
+  overflow-y: hidden;
+  transition: all 500ms ease-in-out;
+}
+
+.body:hover{
+  height: 135px;
 }
 
 .copyright {
