--- a/evaluator/src/app/components/admin/form-new-event/form-new-event.component.scss
+++ b/evaluator/src/app/components/admin/form-new-event/form-new-event.component.scss
@@ -1,7 +1,7 @@
 @import url(src/styles.scss);
 
 .body {
-    padding: 30px;
+    padding: 30px 30px 60px;
     font-family: var(--font);
     color: var(--dark-blue);
 }
