--- a/evaluator/src/app/components/admin/presentation/presentation.component.html
+++ b/evaluator/src/app/components/admin/presentation/presentation.component.html
@@ -36,7 +36,7 @@
                 <td> {{ group.projectName }} </td>
                 <td> {{ group.language.charAt(0).toUpperCase() + group.language.slice(1) }} </td>
                 <td>
-                  <span class="avaliators-count"> Total de avaliações: {{ group.ratings ? group.rating.length : 0 }} </span>
+                  <span class="avaliators-count"> Total de avaliações: {{ group.ratings ? group.ratings.length : 0 }} </span>
                   <button class="btn-list-evaluators" (click)="openDialogEvaluators(group.ratings);"> Exibir avaliadores </button>
                 </td>
               </tr>
