--- a/evaluator/src/app/components/admin/presentation/presentation.component.scss
+++ b/evaluator/src/app/components/admin/presentation/presentation.component.scss
@@ -163,6 +163,7 @@ button {
 }
 
 .btn-list-evaluators{
+  width: 200px;
   background-color: var(--dark-blue);
   color: var(--white);
   padding: 5px 15px;
