--- a/evaluator/src/app/components/login/login.component.scss
+++ b/evaluator/src/app/components/login/login.component.scss
@@ -13,8 +13,8 @@
   img {
     max-width: 400px;
     padding-bottom: 40px;
-    -webkit-filter: drop-shadow(0px 0px 20px rgba(0 0 0 / 90%));
-    filter: drop-shadow(0px 0px 20px rgba(0 0 0 / 90%));
+    // -webkit-filter: drop-shadow(0px 0px 20px rgba(0 0 0 / 90%));
+    // filter: drop-shadow(0px 0px 20px rgba(0 0 0 / 90%));
   }
 }
 
