--- a/evaluator/src/app/components/ranking/ranking.component.scss
+++ b/evaluator/src/app/components/ranking/ranking.component.scss
@@ -9,7 +9,7 @@
 .button-login {
   font-family: var(--font);
   border: none;
-  width: fit-content;
+  width: 8rem;
   height: 30px;
   padding: 0 10px;
   margin-right: 40px;
