--- a/evaluator/src/app/shared/components/footer-credits/footer-credits.component.html
+++ b/evaluator/src/app/shared/components/footer-credits/footer-credits.component.html
@@ -9,7 +9,7 @@
       <a class="link" href="https://www.linkedin.com/in/rbcaputo"> Rob Caputo </a>
     </p>
   </div>
-  <p class="copyright"> Copyright &copy; <a class="link" href="https://github.com/Devs2Blu-Projects"> Os Batutinhas </a> 2023. Todos os direitos cedidos à <a class="link" href="https://www.proway.com.br/"> ProWay.</a></p>
+  <p class="copyright"> Copyright &copy; <a class="link" href="https://github.com/Devs2Blu-Projects"> AvaliaTech </a> 2023. Todos os direitos cedidos à <a class="link" href="https://www.proway.com.br/"> ProWay.</a></p>
   <!-- <div class="logos" style="display: none;"> -->
   <div class="logos" >
     <a href="https://www.blumenau.sc.gov.br"><img class="prefeitura" src="assets/img/prefeitura.png"></a>
