feat(footer): devops team credited

--- a/src/app/shared/components/footer-credits/footer-credits.component.html
+++ b/src/app/shared/components/footer-credits/footer-credits.component.html
@@ -8,6 +8,11 @@
       <a class="link" href="https://www.linkedin.com/in/rafael-demarch/"> Rafael R. Demarch </a> |
       <a class="link" href="https://www.linkedin.com/in/rbcaputo"> Rob Caputo </a>
     </p>
+    <p><i class="fa-solid fa-code"></i><span class="bold"> Devops: </span>
+      <a class="link" href="https://www.linkedin.com/in/claudinei-santos-ti/"> Claudinei Santos </a> |
+      <a class="link" href="https://www.linkedin.com/in/diogo-derossi-klein-20028825"> Diogo D. Klein </a> |
+      <a class="link" href="https://www.linkedin.com/in/jhonatapsilva">Jhonata Silva </a>
+    </p>
   </div>
   <p class="copyright"> Copyright &copy; <a class="link" href="https://github.com/Devs2Blu-Projects"> AvaliaTech </a> 2023. Todos os direitos cedidos à <a class="link" href="https://www.proway.com.br/"> ProWay.</a></p>
   <!-- <div class="logos" style="display: none;"> -->
