--- a/src/app/shared/components/footer-credits/footer-credits.component.html
+++ b/src/app/shared/components/footer-credits/footer-credits.component.html
@@ -1,28 +1,28 @@
 <div class="body">
   <div class="devs">
     <p><i class="fa-solid fa-code"></i><span class="bold"> Desenvolvimento: </span>
-      <a class="link" href="https://www.linkedin.com/in/caiodsj">Caio Diego </a> |
-      <a class="link" href="https://www.linkedin.com/in/itisclaudia/"> Claudia Cabral </a> |
-      <a class="link" href="https://www.linkedin.com/in/helena-luz-139430214/"> Helena Luz </a> |
-      <a class="link" href="https://www.linkedin.com/in/raphael-cerutti-teodoro"> Raphael C. Teodoro </a> |
-      <a class="link" href="https://www.linkedin.com/in/rafael-demarch/"> Rafael R. Demarch </a> |
-      <a class="link" href="https://www.linkedin.com/in/rbcaputo"> Rob Caputo </a>
+      <a class="link" target="_blank" href="https://www.linkedin.com/in/caiodsj">Caio Diego </a> |
+      <a class="link" target="_blank" href="https://www.linkedin.com/in/itisclaudia/"> Claudia Cabral </a> |
+      <a class="link" target="_blank" href="https://www.linkedin.com/in/helena-luz-139430214/"> Helena Luz </a> |
+      <a class="link" target="_blank" href="https://www.linkedin.com/in/raphael-cerutti-teodoro"> Raphael C. Teodoro </a> |
+      <a class="link" target="_blank" href="https://www.linkedin.com/in/rafael-demarch/"> Rafael R. Demarch </a> |
+      <a class="link" target="_blank" href="https://www.linkedin.com/in/rbcaputo"> Rob Caputo </a>
     </p>
     <p><i class="fa-solid fa-code"></i><span class="bold"> Devops: </span>
-      <a class="link" href="https://www.linkedin.com/in/claudinei-santos-ti/"> Claudinei Santos </a> |
-      <a class="link" href="https://www.linkedin.com/in/diogo-derossi-klein-20028825"> Diogo D. Klein </a> |
-      <a class="link" href="https://www.linkedin.com/in/jhonatapsilva">Jhonata Silva </a>
+      <a class="link" target="_blank" href="https://www.linkedin.com/in/claudinei-santos-ti/"> Claudinei Santos </a> |
+      <a class="link" target="_blank" href="https://www.linkedin.com/in/diogo-derossi-klein-20028825"> Diogo D. Klein </a> |
+      <a class="link" target="_blank" href="https://www.linkedin.com/in/jhonatapsilva">Jhonata Silva </a>
     </p>
   </div>
-  <p class="copyright"> Copyright &copy; <a class="link" href="https://github.com/Devs2Blu-Projects"> AvaliaTech </a> 2023. Todos os direitos cedidos à <a class="link" href="https://www.proway.com.br/"> ProWay.</a></p>
+  <p class="copyright"> Copyright &copy; <a class="link" target="_blank" href="https://github.com/Devs2Blu-Projects"> AvaliaTech </a> 2023. Todos os direitos cedidos à <a class="link" target="_blank" href="https://www.proway.com.br/"> ProWay.</a></p>
   <!-- <div class="logos" style="display: none;"> -->
   <div class="logos" >
-    <a href="https://www.blumenau.sc.gov.br"><img class="prefeitura" src="assets/img/prefeitura.png"></a>
-    <a href="https://blusoft.org.br/"><img class="blusoft" src="assets/img/logo-blusoft.png"></a>
-    <a href="https://www.proway.com.br"><img class="proway" src="assets/img/logo-proway.svg"></a>
-    <a href="https://www.furb.br"><img class="furb" src="assets/img/logo-furb.png"></a>
-    <a href="https://www.senior.com.br"><img class="senior" src="assets/img/logo-senior.svg"></a>
-    <a href="https://www.t-systems.com"><img class="tsystems" src="assets/img/logo-tsystems.svg"></a>
-    <a href="https://unifique.com.br"><img class="unifique" src="assets/img/logo-unifique.png"></a>
+    <a target="_blank" href="https://www.blumenau.sc.gov.br"><img class="prefeitura" src="assets/img/prefeitura.png"></a>
+    <a target="_blank" href="https://blusoft.org.br/"><img class="blusoft" src="assets/img/logo-blusoft.png"></a>
+    <a target="_blank" href="https://www.proway.com.br"><img class="proway" src="assets/img/logo-proway.svg"></a>
+    <a target="_blank" href="https://www.furb.br"><img class="furb" src="assets/img/logo-furb.png"></a>
+    <a target="_blank" href="https://www.senior.com.br"><img class="senior" src="assets/img/logo-senior.svg"></a>
+    <a target="_blank" href="https://www.t-systems.com"><img class="tsystems" src="assets/img/logo-tsystems.svg"></a>
+    <a target="_blank" href="https://unifique.com.br"><img class="unifique" src="assets/img/logo-unifique.png"></a>
   </div>
 </div>
